[metadata]
name = heat-templates
summary = heat-templates
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
